crates/tui/tests/snapshots/snapshots__sidebar_empty.snap
---
source: crates/tui/tests/snapshots.rs
assertion_line: 115
expression: rendered
---
 PILOT  0  [7d]
 / filter (needs:reply ci:failed …)

 ────────────────────────────────────
