crates/tui/tests/snapshots/snapshots__sidebar_focused_3_sessions.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
 PILOT  3  [7d]
 / filter (needs:reply ci:failed …)

 ────────────────────────────────────

   ▾  owner/repo  3
   ▸ #1A task: o/r#1              1mo
     #2A task: o/r#2              1mo
     #3A task: o/r#3              1mo
