crates/tui/tests/snapshots/snapshots__sidebar_unfocused_1_session.snap
---
source: crates/tui/tests/snapshots.rs
assertion_line: 109
expression: rendered
---
 PILOT  1  [7d]
 / filter (needs:reply ci:failed …)

 ────────────────────────────────────

   ▾  owner/repo
